--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <section id="hero">
     <div class="hero-container">
       <h1>Kylina Regan</h1>
-      <h2>I'm a Graphic Designer In Mission Creating Designs That Captivate And Inspire.</h2>
+      <h2>I'm a great Graphic Designer In Mission Creating Designs That Captivate And Inspire.</h2>
       <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
     </div>
   </section><!-- End Hero -->
