--- a/index.html
+++ b/index.html
@@ -468,6 +468,16 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-logocreations">
+            <div class="portfolio-img"><img src="assets/img/portfolio/Nimbus.png" class="img-fluid" alt=""></div>
+            <div class="portfolio-info">
+              <h4>Nimbis</h4>
+              <p>Sleepwear Brand Logo</p>
+              <a href="assets/img/portfolio/Nimbus.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Logo I created for a sleepwear brand."><i class="bx bx-plus"></i></a>
+              
+            </div>
+          </div>
+
         </div>
 
       </div>
