--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <section id="hero">
     <div class="hero-container">
       <h1>Kylina Regan</h1>
-      <h2>Transforming visions into vibrant realities.</h2>
+      <h2>Welcome to my portfolio, lets make sweet sweet projects together.</h2>
       <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
     </div>
   </section><!-- End Hero -->
@@ -98,7 +98,7 @@
                 </div>
                 <div class="col-lg-6">
                   <ul>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>31</span></li>
+                 
                     <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Diploma</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>kylinamr@gmail.com</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
@@ -128,7 +128,7 @@
               <p><em>Creative graphic designer with a passion for transforming ideas into culptivating visual experiences. Fresh out of school. I have a strong foundation in various design mediums. </em></p>
               <p>
               <ul>
-                <li>7964 Burdock St, Mission, BC</li>
+                
                 <li>(778)-347-4178</li>
                 <li>kylinamr@gmail.com</li>
                 <p>You can find my resume <a href="assets/img/portfolio/Resumenew.pdf" target="_blank">here</a>.</p>
