--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <section id="hero">
     <div class="hero-container">
       <h1>Kylina Regan</h1>
-      <h2>Welcome to my portfolio, lets make sweet sweet projects together.</h2>
+      <h2>Welcome to my portfolio, lets create together.</h2>
       <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
     </div>
   </section><!-- End Hero -->
@@ -538,7 +538,7 @@
                 <div class="info-box mt-4">
                   <i class="bx bx-phone-call"></i>
                   <h3>Call Me</h3>
-                  <p>(778)-347-4178</p>
+                  <p>(778)-809-4178</p>
                 </div>
               </div>
             </div>
